plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.142'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    mavenCentral() // 供测试依赖（如 JUnit）与 JNA 下载
    // 注：JogAmp 仓库已移除——项目从未使用 JOCL 绑定（OpenCL 走 JNA 直调，见 OpenCLBackend）
}

base {
    archivesName = mod_id
}

// 构建产物命名：Game Console-<version>-<Loader>-<MC版本>-beta7.jar
var loaderName = "NeoForge"
tasks.named('jar') {
    archiveBaseName = "${mod_name}-${mod_version}-${loaderName}-${minecraft_version}-beta7"
    archiveVersion = ''
    archiveClassifier = ''
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

// 统一源文件编码为 UTF-8
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
tasks.withType(ProcessResources).configureEach {
    filteringCharset = 'UTF-8'
    // ★ 优化：排除任何残留的空目录(如 data/game_console/recipes/)和占位文件
    exclude '**/recipes/**', '**/.gitignore', '**/.gitkeep'
}

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }


dependencies {
    // Example mod dependency with JEI
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    // compileOnly "mezz.jei:jei-${mc_version}-forge-api:${jei_version}"
    // runtimeOnly "mezz.jei:jei-${mc_version}-forge:${jei_version}"

    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"

    // Example mod dependency using a file as dependency
    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")

    // Example project dependency using a sister or child project:
    // implementation project(":myproject")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html

    // ─── 单元测试：JUnit 5 ───
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    // ─── OpenCL GPU 加速 ───
    // JNA 通过 compileOnly 引入（编译期可见），运行时由玩家环境的 classloader 解析
    // —— 不再 jarJar 嵌入。原因：Java 22 模块系统下，自嵌入的 jna jar 会形成
    //   "com.sun.jna" 自动模块，与其他 mod（如 Iris/Sodium 或 NeoForge 间接带）
    //   提供的 jna 形成两个同名模块冲突，触发 ResolutionException。
    // 缺 JNA 时由 OpenCLBackend.canExecute() 检测并 catch(Throwable) 回退到 CPU。
    compileOnly 'net.java.dev.jna:jna:5.14.0'
}

test {
    useJUnitPlatform()
}

// Pure-Java self-play training entry point. Pass arguments with -PtrainArgs="--weights path ...".
tasks.register('trainGoAI', JavaExec) {
    group = 'training'
    description = 'Train the Go MCTS neural evaluator with self-play'
    mainClass = 'com.wzz.game_console.client.screens.games.gogame.GoTrainingMain'
    args((project.findProperty('trainArgs') ?: '').toString().trim().split("\\s+").findAll { !it.isEmpty() })
    classpath = sourceSets.main.runtimeClasspath
    maxHeapSize = '4g'
}

tasks.register('runChessSim', JavaExec) {
    group = 'training'
    description = '自对弈模拟：内置中国象棋引擎自我对弈，统计胜率/步数/耗时'
    mainClass = 'com.wzz.game_console.client.screens.games.chess.ChessSimulationMain'
    args((project.findProperty('chessSimArgs') ?: '').toString().trim().split("\\s+").findAll { !it.isEmpty() })
    classpath = sourceSets.main.runtimeClasspath
}

tasks.register('adversarialTrain', JavaExec) {
    group = 'training'
    description = '对抗训练：己方 MCTS AI vs 外部 KataGo 引擎'
    mainClass = 'com.wzz.game_console.client.screens.games.gogame.GoAdversarialMain'
    args((project.findProperty('advArgs') ?: '').toString().trim().split("\\s+").findAll { !it.isEmpty() })
    classpath = sourceSets.main.runtimeClasspath
    maxHeapSize = '4g'
}

tasks.register('gpuProbe', JavaExec) {
    group = 'training'
    description = '探测 OpenCL GPU 设备是否可用'
    mainClass = 'com.wzz.game_console.client.screens.games.gogame.GoGpuProbe'
    classpath = sourceSets.main.runtimeClasspath
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
